# chipanalysis

./: pyproject.toml
chipanalysis/: chip_alignment.py
chipanalysis/notebooks/: cell_counter.ipynb  make_merged.ipynb  region_fluorescence.ipynb  test.ipynb  test2.ipynb  video_maker.ipynb
chipanalysis/scripts/: make_video.py
chipanalysis/utils/: ROI_selector.py  file_reader.py  maye_video_axio.py
