[project]
name = "chipanalysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "coco", email = "corentin@bisot.com" }
]
dependencies = [
  "moviepy>=2.2.0,<3.0.0",
  "imageio-ffmpeg>=0.6.0,<0.7.0",
  "numpy>=1.23",
  "notebook>=7.0.0",
  "aicspylibczi",
  "ipympl",
  "matplotlib",
  "pandas",
  "seaborn",
  "opencv-python",
  "scikit-image"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
